# wallet-as-a-service

./: Cargo.toml  README.md
src/: main.rs
src/crypto/: mod.rs
src/handlers/: create_wallet.rs  delete_wallet.rs  mod.rs  sign_evm_transaction.rs  sign_transaction.rs
src/storage/: mod.rs
