[package]
name = "wallet-as-a-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = "1.47.1"
anyhow = "1.0.99"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.11.0-rc.0"
hkdf = "0.13.0-rc.0"
rand = "0.9.2"
serde_json = "1.0.142"
aes-gcm = "0.11.0-rc.0"
k256 = "0.14.0-pre.9"
alloy = { version = "1.0.24", features = ["rlp"] }
solana-sdk = "2.3.1"
hex = "0.4.3"
uuid = { version = "1.18.0", features = ["v4"] }
signature = "3.0.0-rc.2"
base64 = "0.22.1"
p256 = "0.14.0-pre.9"
bincode = "1.3.3"


[workspace.lints.clippy]
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
large_stack_frames = "warn"
manual_assert = "warn"
manual_clamp = "warn"
manual_string_new = "warn"
match_same_arms = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
single_char_pattern = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trait_duplication_in_bounds = "warn"
trailing_empty_array = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
uninhabited_references = "warn"
unnecessary_struct_initialization = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
unwrap_used = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
zero_sized_map_values = "warn"